Read kson meta field

--- a/Beatmap/CMakeLists.txt
+++ b/Beatmap/CMakeLists.txt
@@ -37,3 +37,4 @@ target_link_libraries(Beatmap Shared)
 
 ## 3rd Party dependencies
 target_link_libraries(Beatmap sqlite3)
+target_link_libraries(Beatmap nlohmann_json)
