Change how -Werror flag is set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ elseif(WIN32 AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
 endif()
 
 option(BUILD_SHARED_LIBS "Build libraries as shared libraries" OFF)
+option(USC_GNU_WERROR "Set Werror for gcc." OFF)
 
 project(USC VERSION 0.5.0)
 if(WIN32 AND ${CMAKE_VERSION} VERSION_GREATER "3.12")
