--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
                 sudo apt-get update
                 sudo apt-get install g++ libegl1-mesa-dev libfreetype6-dev libogg-dev libvorbis-dev libsdl2-dev libarchive-dev zlib1g-dev libjpeg-dev libpng-dev
             - name: cmake
-              run: cmake -DCMAKE_BUILD_TYPE=Release .
+              run: cmake -DCMAKE_BUILD_TYPE=Release -DUSC_GNU_WERROR=On .
             - name: make
               run: make
             - name: Prepare for bundling AppImage
