--- a/Main/CMakeLists.txt
+++ b/Main/CMakeLists.txt
@@ -70,6 +70,7 @@ else(GIT_FOUND)
 endif(GIT_FOUND)
 
 set_output_postfixes(usc-game)
+set_werror(usc-game)
 
 if(MSVC)
 	# Set debugging folder
@@ -78,8 +79,6 @@ if(MSVC)
 	# Target subsystem on windows, enable multiprocess build and faster PDB gen
 	set_target_properties(usc-game PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS /DEBUG:FASTLINK")
 	set_target_properties(usc-game PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /DEBUG:FULL")
-elseif(NOT APPLE)
-    target_compile_options(usc-game PUBLIC -Wall -Wextra -Werror -Wno-unused-variable -Wno-unused-parameter -Wno-unused-function)
 endif(MSVC)
 
 # Dependencies
