--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ bin/skins/Default/nautica.json
 bin/replays
 bin/profiles
 bin/preview
+_deps/*
 
 # Intermediate Files
 x64
@@ -38,6 +39,7 @@ Release
 *.iobj
 *.ipdb
 lib/
+vcpkg_installed/
 
 # Profiling results
 *.vspx
