Improved downloader for the updater

--- a/updater/CMakeLists.txt
+++ b/updater/CMakeLists.txt
@@ -9,6 +9,8 @@ set(UPDATER_SRC ${SRC})
 
 add_executable(updater ${UPDATER_SRC})
 
+target_compile_features(updater PUBLIC cxx_std_17)
+
 target_link_libraries(updater cpr)
 target_link_libraries(updater ${LibArchive_LIBRARIES})
 target_include_directories(updater SYSTEM PRIVATE ${LibArchive_INCLUDE_DIRS})
