Update to CPR 1.10.5

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,7 @@
 [submodule "third_party/cpr"]
 	path = third_party/cpr
 	url = https://github.com/whoshuu/cpr.git
+	branch = 1.10.x
 [submodule "third_party/miniaudio"]
 	path = third_party/miniaudio
 	url = https://github.com/dr-soft/miniaudio.git
